infra/k8s/api/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
